--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- ``biome_type``: add enum attrs for ``caption`` and ``plant_raw_flags``
 
 # 50.12-r3
 
