--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- ``plant_flags``: rename ``is_burning``, ``is_drowning``, ``is_dead`` to Bay12 names ``unused_01``, ``season_dead``, ``dead``
 
 # 50.13-r2
 
