--- a/changelog.txt
+++ b/changelog.txt
@@ -21,6 +21,7 @@ Template for new versions:
 ## Structures
 - ``plant_flags``: rename ``is_burning``, ``is_drowning``, ``is_dead`` to Bay12 names ``unused_01``, ``season_dead``, ``dead``
 - ``job.item_category`` is now ``job.specflag``, contains a union of flag fields, and depends on the job type
+- ``slab_engraving_type``: correct order of items (last two were swapped)
 
 # 50.13-r2
 
