correct return type of `create_nemesis' vmethod on `unitst`

--- a/changelog.txt
+++ b/changelog.txt
@@ -22,6 +22,7 @@ Template for new versions:
 - ``plant_flags``: rename ``is_burning``, ``is_drowning``, ``is_dead`` to Bay12 names ``unused_01``, ``season_dead``, ``dead``
 - ``job.item_category`` is now ``job.specflag``, contains a union of flag fields, and depends on the job type
 - ``slab_engraving_type``: correct order of items (last two were swapped)
+- ``unitst``: correct return type of ``create_nemesis`` vmethod
 - ``world_data``: identify many fields and substructures
 
 # 50.13-r2
