--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- ``world_site``: rename ``is_mountain_halls`` and ``is_fortress`` to Bay12 names ``min_depth`` and ``max_depth``
 
 # 50.13-r3
 
