--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
+
+# 50.13-r4
+
+## Structures
 - ``world_site``: rename ``is_mountain_halls`` and ``is_fortress`` to Bay12 names ``min_depth`` and ``max_depth``
 
 # 50.13-r3
