--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,14 @@ Template for new versions:
 
 ## Structures
 
+# 50.14-r1
+
+## Structures
+
+# ``job_item_flags3``: added new flag ``grown_not_crafted``
+# ``widget``: changed ``visibility_flag`` to ``flag`` (matching DF internal name)
+# added new keybindings for 50.14
+
 # 50.13-r5
 
 # 50.13-r4
