--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
+
+# 50.14-r2
+
+## Structures
 - added ``unitst_set_automatic_professions`` entry point export to list of known globals
 
 # 50.14-r1
