changelog editing pass

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- fixed incorrect vtable address for ``widget`` superclass on Linux
 
 # 50.15-r1
 
