--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
+
+# 50.15-r2
+
+## Structures
 - fixed incorrect vtable address for ``widget`` superclass on Linux
 
 # 50.15-r1
