Great Reorganization: DFHack-specific types

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,12 @@ Template for new versions:
 # Future
 
 ## Structures
+- reorganize all structure definitions to match bay12 header layouts
+- promote all bay12 structures, enums, and bitfields to top-level types
+- create numerous new structures whose contents had previously been inlined
+- merged several duplicate structure/enum types
+- fill in a bunch of structures that were missing
+- fix a variety of structure errors
 
 # 51.02-r1
 
