add itemized structure changes to changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -20,11 +20,78 @@ Template for new versions:
 
 ## Structures
 - reorganize all structure definitions to match bay12 header layouts
-- promote all bay12 structures, enums, and bitfields to top-level types
-- create numerous new structures whose contents had previously been inlined
+- promote all bay12 structures, enums, and bitfields to top-level types: this means that most ``T_*`` types now have top-level names
+- create numerous new structures whose contents had previously been missing or inlined into other structures
 - merged several duplicate structure/enum types
-- fill in a bunch of structures that were missing
 - fix a variety of structure errors
+- specific changes: Building vmethod ``countHospitalSupplies`` now returns ``abstract_building_contents`` instead of ``hospital_supplies``, which has different field names
+- specific changes: When indexing into a vector named ``scribejobs``, replace ``item_id`` and ``written_content_id`` with ``target_id`` and ``relevant_id``
+- specific changes: ``conversation_state_type.DenyPermissionSleep`` is now ``SleepPermissionRequested``
+- specific changes: ``block_square_event_spoorst.[whatever]`` is now ``block_square_event_spoorst.info.[whatever]``
+- specific changes: ``building_stockpilest.max_*/container_*`` is now ``building_stockpilest.storage.max_*/container_*``
+- specific changes: ``building_civzonest.zone_settings.pen`` is now ``building_civzonest.zone_settings.pen.flags``
+- specific changes: ``building_civzonest.zone_settings.tomb`` is now ``building_civzonest.zone_settings.tomb.flags``
+- specific changes: ``building_bridgest.gate_flags.closed/closing/opening`` are now ``raised/raising/lowering``
+- specific changes: ``building_weaponst.gate_flags.closed/closing/opening`` are now ``retracted/retracting/unretracting``
+- specific changes: ``building.design.builder1/builder1_civ/builder2`` are now ``.worker/worker_create_event/curworker`` (and the 2nd is a History Event, not an Entity)
+- specific changes: ``stockpile_settings.allow_organic/allow_inorganic`` are now ``stockpile_settings.misc.allow_organic/allow_inorganic``
+- specific changes: ``world.busy_buildings[]`` is now ``world.building_uses.buildings[]``
+- specific changes: ``world.coin_batches`` is now ``world.coin_batches.all``
+- specific changes: ``spatter.flags.water_soluble`` is now ``external``
+- specific changes: ``creation_zone_pwg_alteration_campst.tent_matlgoss`` is now ``.tent_matgloss`` (spelling fix)
+- specific changes: ``world.raws.body_templates`` and ``world.raws.bodyglosses`` are now ``world.raws.creaturebody.*``
+- specific changes: ``world.raws.tissue_templates/body_detail_plans/creature_variations`` are now ``world.raws.*.all``
+- specific changes: ``material_force_adjustst.mat_indx`` is now ``mat_index`` (spelling fix)
+- specific changes: ``game.minimap.minimap[x][y]`` is now ``game.minimap.minimap[x][y].tile``
+- specific changes: ``historical_entity.relations.diplomacy[]`` is now ``historical_entity.relations.diplomacy.state[]``
+- specific changes: ``historical_entity.conquered_site_group_flags`` is now ``historical_entity.law.conquered_site_group_flags``
+- specific changes: ``world.effects`` is now ``world.effects.all``
+- specific changes: ``world.raws.entities`` is now ``world.raws.entities.all``
+- specific changes: ``site_type`` enum deleted, merged with ``world_site_type``
+- specific changes: ``world.event.dirty_waters[].*`` is now ``world.event.dirty_waters[].pos.*`` 
+- specific changes: ``death_condition_type`` enum replaced with ``histfig_body_state`` (notably in ``state_profilest.body_state``)
+- specific changes: ``history_hit_item``, ``history_event_reason_info``, and ``history_event_circumstance_info`` removed and substituted
+- specific changes: ``knowledge_profilest.known_locations.ab_review[]`` is now ``.reports[]`` (because ``.known_locations`` got merged with ``site_reputation_info``)
+- specific changes: ``world.raws.interactions[]`` is now ``world.raws.interactions.all[]``
+- specific changes: ``itemdef_instrumentst.registers/timbre`` are now ``itemdef_instrumentst.timbre.registers/timbre``
+- specific changes: ``dye_info`` removed and substituted
+- specific changes: ``job_art_specification`` removed and substituted
+- specific changes: ``entity_activity_statistics.discovered_(creature_foods/creatures/plant_foods/plants)`` is now ``entity_activity_statistics.knowledge.*``
+- specific changes: ``world.mandates[]`` is now ``world.mandates.all[]``
+- specific changes: ``creature_interaction_effect.counter_trigger.required`` is now ``creature_interaction_effect.counter_trigger.flag.bits.REQUIRED``
+- specific changes: ``creature_interaction_effect_target`` removed and substituted
+- specific changes: ``material_common`` removed, its contents prepended to ``material`` and ``material_template``
+- specific changes: ``world.raws.material_templates`` is now ``world.raws.material_templates.all``
+- specific changes: ``world.raws.syndromes`` is now ``world.raws.mat_table.syndromes``
+- specific changes: ``world.raws.effects`` is now ``world.raws.mat_table.effects``
+- specific changes:  ``world.raws.inorganics`` is now ``world.raws.inorganics.all``
+- specific changes: ``world.raws.inorganics_subset`` is now ``world.raws.inorganics.cheap``
+- specific changes: ``plotinfo.main.selected_hotkey/in_rename_hotkey`` are now ``plotinfo.main.hotkey_interface.*``
+- specific changes: ``world.proj_list`` is now ``world.projectiles.all``
+- specific changes: ``general_ref_building_well_tag.direction`` is now a bitfield
+- specific changes: ``world_region_details.edges.(split_x/split_y)[][].x/y`` are now ``.break_one/break_two``
+- specific changes: ``world_population_ref.depth`` is now ``world_population_ref.layer_depth`` and is now an integer instead of an enum
+- specific changes: Bitfield ``region_weather_flag`` is now ``region_weather_bits`` (to avoid conflicts)
+- specific changes: Rhythm ``beat_flag`` realigned (``PrimaryAccent`` removed, because it wasn't really a unique flag)
+- specific changes: ``dipscript_info.script_steps/script_vars`` are now ``dipscript_info.script.steps/vars``
+- specific changes: ``script_step_discussst.event`` is now ``script_step_discussst.duration``
+- specific changes: ``script_step_dipeventst`` and ``script_step_invasionst`` fields renamed
+- specific changes: ``site_architecture_changest.spec_flag`` is now a tagged union
+- specific changes: ``squad.schedule[x][y]`` is now ``squad.schedule.routine[x].month[y]``
+- specific changes: ``world.unit_chunks`` is now ``world.unit_chunks.all``
+- specific changes: ``historical_entity.events[]`` is now ``historical_entity.rumor_info.events``
+- specific changes: ``world.enemy_status_cache.rel_map[x][y]`` is now ``world.enemy_status_cache.rel_map[x][y].ur``
+- specific changes: ``unit.curse.interaction_id/interaction_time/interaction_delay/time_on_site/own_interaction/own_interaction_delay`` are now ``unit.cuse.interaction.*``
+- specific changes: ``unit.cached_glowtile_type`` is now ``unit.cache.cached_glowtile_type``
+- specific changes: ``unit_preference.active`` is now ``unit_preference.flags.visible``
+- specific changes: ``witness_report_flags`` replaced with correct flags
+- specific changes: ``caste_body_info.clothing_items.[]`` is now ``caste_body_info.clothing_items.bp[]``
+- specific changes: ``plant_tree_tile.branches_dir`` enum collapsed into 4 simple flags
+- specific changes: ``world.populations`` is now ``world.populations.all``
+- specific changes: ``world_data.constructions.map[x][y][N]`` is now ``world_data.constructions.map[x][y].square[N]``
+- specific changes: ``world.family_info[]`` is now ``world.family_info.family[]``
+- specific changes: ``world.fake_world_info[]`` is now ``world.fake_world_info.language[]``
+- specific changes: ``world.selected_direction`` is now ``world.selected_direction[0]`` (and there are 3 additional entries)
 
 # 51.02-r1
 
