fix typo in changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -81,7 +81,7 @@ Template for new versions:
 - specific changes: ``world.unit_chunks`` is now ``world.unit_chunks.all``
 - specific changes: ``historical_entity.events[]`` is now ``historical_entity.rumor_info.events``
 - specific changes: ``world.enemy_status_cache.rel_map[x][y]`` is now ``world.enemy_status_cache.rel_map[x][y].ur``
-- specific changes: ``unit.curse.interaction_id/interaction_time/interaction_delay/time_on_site/own_interaction/own_interaction_delay`` are now ``unit.cuse.interaction.*``
+- specific changes: ``unit.curse.interaction_id/interaction_time/interaction_delay/time_on_site/own_interaction/own_interaction_delay`` are now ``unit.curse.interaction.*``
 - specific changes: ``unit.cached_glowtile_type`` is now ``unit.cache.cached_glowtile_type``
 - specific changes: ``unit_preference.active`` is now ``unit_preference.flags.visible``
 - specific changes: ``witness_report_flags`` replaced with correct flags
