--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
+
+# 51.07-r1
+
+## Structures
 - reorganize all structure definitions to match bay12 header layouts
 - promote all bay12 structures, enums, and bitfields to top-level types: this means that most ``T_*`` types now have top-level names
 - create numerous new structures whose contents had previously been missing or inlined into other structures
