remove fake `curse` compound in `unitst`
resolves an alignment problem

Co-Authored-By: Quietust <1005195+quietust@users.noreply.github.com>

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
+- removed fake ``curse`` compound in ``unitst`` to resolve an alignment issue
 
 # 51.07-r1
 
