Update changelog for 52.01-r1

--- a/changelog.txt
+++ b/changelog.txt
@@ -21,6 +21,11 @@ Template for new versions:
 ## Structures
 - removed fake ``curse`` compound in ``unitst`` to resolve an alignment issue
 
+# 52.01-r1
+
+## Structures
+- removed fake ``curse`` compound in ``unitst`` to resolve an alignment issue
+
 # 51.07-r1
 
 ## Structures
