Update changelog for 52.02-r1

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,7 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
-- removed fake ``curse`` compound in ``unitst`` to resolve an alignment issue
+
+# 52.02-r1
+
+## Structures
 
 # 52.01-r1
 
