update changelog for 52.03-r1.1

--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,13 @@ Template for new versions:
 
 # Future
 
+## Structures
+
+# 52.03-r1.1
+
+## Structures
+- fixed alignment issue in ``entity_raw``
+
 # 52.01-r1
 
 ## Structures
