--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,11 @@ Template for new versions:
 
 ## Structures
 
+# 53.04-r1
+
+## Structures
+- several arrays indexed by enums have been recoded to use the enum's size to size the array so that these will automatically update when the enum is updated, reflecting Bay12 practice
+
 # 52.03-r2
 
 ## Structures
