generate enum traits as `constexpr`

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,9 @@ Template for new versions:
 # Future
 
 ## Structures
+- updated codegen to generate enum trait constants as ``consteval``
+
+## Structures
 
 # 53.04-r1
 
