Fix base class on widget_anchored_tile
Fixes #864

--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,8 @@ Template for new versions:
 # Future
 
 ## Structures
+- added missing field in history_event_artifact_createdst
+- fixed incorrect base class on widget_anchored_tile
 
 # 53.04-r1
 
