--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,10 @@ Template for new versions:
 # Future
 
 ## Structures
+
+# 53.06-r1
+
+## Structures
 - added missing field in history_event_artifact_createdst
 - fixed incorrect base class on widget_anchored_tile
 
