--- a/changelog.txt
+++ b/changelog.txt
@@ -19,7 +19,7 @@ Template for new versions:
 # Future
 
 ## Structures
-- updated codegen to generate enum trait constants as ``consteval``
+- updated codegen to generate enum trait constants as ``constexpr``
 
 ## Structures
 
